--- a/TP1/IFT3335-TP1-Rapport/main.tex
+++ b/TP1/IFT3335-TP1-Rapport/main.tex
@@ -16,10 +16,10 @@ Yu Deng, 20151659}
 
 \section*{Tâche 1 et Tâche 2}\\
 
-Nous avons testé le fichier d'origine, qui est le fichier sudoku.py de Norvig, et nous avons obtenu les résultats suivants (prenez simplement une valeur, chaque résultat de test doit être différent) :\\
+On test \textbf{sudoku original.py}, qui est le fichier sudoku.py de Norvig, et on a le résultat suivants (prenez simplement une valeur, chaque résultat de test doit être différent) :\\
 $#solve_all(from file("100sudoku.txt"), "95sudoku", None)$\\
 \includegraphics[scale=0.3]{t1_1.jpeg}\\
-Avec "Choisir les carrés non remplis", ceci revient à une recherche pure en profondeur d’abord sans aucune heuristique. Voici les résultats:\\
+Avec "Choisir les carrés non remplis", On test \textbf{sudoku change random.py}, ceci revient à une recherche pure en profondeur d’abord sans aucune heuristique. Voici les résultats:\\
 $#solve_all(from file("100sudoku.txt"), "95sudoku", None)$\\
 \includegraphics[scale=0.3]{t2_1.jpeg}\\
 
