--- a/TP1/IFT3335-TP1-Rapport/main.tex
+++ b/TP1/IFT3335-TP1-Rapport/main.tex
@@ -3,6 +3,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 
+
 \title{IFT3335-TP1-Rapport}
 \author{Wenhao Xu, 20150702\\
 Mingze Li, \\
@@ -24,6 +25,12 @@ $#solve_all(from file("100sudoku.txt"), "95sudoku", None)$\\
 \includegraphics[scale=0.3]{t2_1.jpeg}\\
 
 $\bullet$ Nous pouvons en déduire que pour le deuxième code, nous avons besoin d'un peu plus de temps, même si la différence n'est pas très grande, mais cela montre aussi l'importance de l'heuristique.
+
+\section*{Tâche 3}\\
+\\
+\includegraphics[scale=0.4]{t3.png}
+
+
 
 
 
