--- a/TP2/disambiguation/meaning_predict.ipynb
+++ b/TP2/disambiguation/meaning_predict.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import csv\n",
@@ -30,11 +31,11 @@
     "CATEGORIES_STOPWORDS_EXTRA = ['/IN', '/DT', '/CC']\n",
     "\n",
     "# 去停词代码\n",
-    "# STOPLIST_TXT = pd.read_csv('tool word list (stoplist).txt',header=None)[0].values.tolist()\n",
-    "# PUNCTUATION_STOPWORDS = ['.', ',', '[', ']', '(', ')', '\\n', \"'\", \"''\", '``', ':', ';', '{', '}', '\"']+STOPLIST_TXT\n",
+    "STOPLIST_TXT = pd.read_csv('tool word list (stoplist).txt',header=None)[0].values.tolist()\n",
+    "PUNCTUATION_STOPWORDS = ['.', ',', '[', ']', '(', ')', '\\n', \"'\", \"''\", '``', ':', ';', '{', '}', '\"']+STOPLIST_TXT\n",
     "\n",
     "# 不去停词\n",
-    "PUNCTUATION_STOPWORDS = ['.', ',', '[', ']', '(', ')', '\\n', \"'\", \"''\", '``', ':', ';', '{', '}', '\"']\n",
+    "# PUNCTUATION_STOPWORDS = ['.', ',', '[', ']', '(', ')', '\\n', \"'\", \"''\", '``', ':', ';', '{', '}', '\"']\n",
     "\n",
     "\n",
     "# Config\n",
@@ -83,14 +84,6 @@
     "        }\n",
     "    }}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "aaba1d01",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -176,27 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "5d511698",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "f54044d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nw_dataset.csv generated\n",
-      "gc_dataset.csv generated\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gc_extraction()\n",
     "# whole_sentence_extraction()"
@@ -214,6 +190,7 @@
     "datasets = ['gc']\n",
     "# datasets = ['gc','nw']\n",
     "models =  ['naive_bayes', 'decision_tree','random_forest', 'svm','mlp']\n",
+    "# models =  ['mlp']\n",
     "for current_dataset in datasets:\n",
     "    print(CONFIG[current_dataset])\n",
     "    data = pd.read_csv(CONFIG[current_dataset]['filename'], header=None)\n",
@@ -240,31 +217,40 @@
     "            y_pred = dt.predict(X_test)\n",
     "            acc = accuracy_score(y_test, y_pred)\n",
     "            f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "#             print('decision_tree Accuracy: ' + str('{:.4f}'.format(acc)))\n",
+    "            print('decision_tree Accuracy: ' + str('{:.4f}'.format(acc)))\n",
     "        elif current_model == 'random_forest':\n",
     "            clf = RandomForestClassifier(max_depth=12, random_state=0)\n",
     "            clf = clf.fit(X_train, y_train)\n",
     "            y_test = clf.predict(X_test)  \n",
     "            acc = accuracy_score(y_test, y_pred)\n",
     "            f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "#            print('random_forest Accuracy: ' + str('{:.4f}'.format(acc)))\n",
+    "            print('random_forest Accuracy: ' + str('{:.4f}'.format(acc)))\n",
     "\n",
+    "        elif current_model == 'svm':\n",
+    "            kernels=['sigmoid','rbf']\n",
+    "            clf=svm.SVC(kernel=kernels[1]).fit(X_train, y_train)\n",
+    "            y_test = clf.predict(X_test)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "            print('svm Accuracy: ' + str('{:.4f}'.format(acc)))\n",
     "\n",
+    "        elif current_model == 'mlp':\n",
+    "            mlp = MLPClassifier(hidden_layer_sizes=CONFIG[current_dataset]['mlp']['hidden_layer_sizes']\n",
+    "                                , max_iter=3000\n",
+    "                                , solver=CONFIG[current_dataset]['mlp']['solver']\n",
+    "            ,activation=CONFIG[current_dataset]['mlp']['activation'])\n",
+    "            mlp.fit(X_train, y_train)\n",
+    "            y_pred = mlp.predict(X_test)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred, average='macro')\n",
+    "            print('mlp Accuracy: ' + str('{:.4f}'.format(acc)))\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dfba5150",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -278,12 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
