--- a/TP2/disambiguation/meaning_predict.ipynb
+++ b/TP2/disambiguation/meaning_predict.ipynb
@@ -169,11 +169,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 39,
+   "id": "5d511698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n-words feature extract\n",
+    "def nw_extraction(punctuation_stopwords=True, custom_n_words=None):\n",
+    "    lancaster_stemmer = LancasterStemmer()\n",
+    "    if custom_n_words is None:\n",
+    "        n_words = CONFIG['nw']['n_words']\n",
+    "    else:\n",
+    "        n_words = custom_n_words\n",
+    "    data = []\n",
+    "    with open('interest-original.txt') as file:\n",
+    "        lines = file.readlines()\n",
+    "    separator = lines[1]\n",
+    "    lines.remove(separator)\n",
+    "    for line in lines:\n",
+    "        line = word_tokenize(line)\n",
+    "        try:\n",
+    "            line.remove('======================================')\n",
+    "        except:\n",
+    "            pass\n",
+    "        for i in range(len(line)):\n",
+    "            line[i] = lancaster_stemmer.stem(line[i])\n",
+    "        if punctuation_stopwords:\n",
+    "            line = list(filter(lambda x: x not in PUNCTUATION_STOPWORDS, line))\n",
+    "        nulls = []\n",
+    "        for _ in range(n_words):\n",
+    "            nulls.append('VOID')\n",
+    "        line = nulls + line + nulls\n",
+    "        target_word_found = False\n",
+    "        for i in range(len(line)):\n",
+    "            if line[i].find('interest_') == 0:\n",
+    "                category = 'C' + line[i][9:10]\n",
+    "                line = line[i - n_words:i + n_words + 1]\n",
+    "                # 删除n_words+1的元素，即interest\n",
+    "                line.pop(n_words)\n",
+    "                target_word_found = True\n",
+    "                break\n",
+    "            elif line[i].find('interests_') == 0:\n",
+    "                category = 'C' + line[i][10:11]\n",
+    "                line = line[i - n_words:i + n_words + 1]\n",
+    "                line.pop(n_words)\n",
+    "                target_word_found = True\n",
+    "                break\n",
+    "            elif not line[i].isalpha():\n",
+    "                line[i] = 'NUM'\n",
+    "        if target_word_found:\n",
+    "            line = ' '.join(line)\n",
+    "            line = line.replace('VOID', '')\n",
+    "            line = [category, line]\n",
+    "            data.append(line)\n",
+    "    with open(CONFIG['nw']['filename'], 'w', newline='') as file:\n",
+    "        writer = csv.writer(file)\n",
+    "        writer.writerows(data)\n",
+    "    print(CONFIG['nw']['filename'] + ' generated')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "f54044d7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "nw_extraction()\n",
     "gc_extraction()\n",
     "# whole_sentence_extraction()"
    ]
@@ -217,7 +279,7 @@
     "            y_pred = dt.predict(X_test)\n",
     "            acc = accuracy_score(y_test, y_pred)\n",
     "            f1 = f1_score(y_test, y_pred, average='macro')\n",
-    "            print('decision_tree Accuracy: ' + str('{:.4f}'.format(acc)))\n",
+    "#             print('decision_tree Accuracy: ' + str('{:.4f}'.format(acc)))\n",
     "        elif current_model == 'random_forest':\n",
     "            clf = RandomForestClassifier(max_depth=12, random_state=0)\n",
     "            clf = clf.fit(X_train, y_train)\n",
@@ -244,6 +306,7 @@
     "            acc = accuracy_score(y_test, y_pred)\n",
     "            f1 = f1_score(y_test, y_pred, average='macro')\n",
     "            print('mlp Accuracy: ' + str('{:.4f}'.format(acc)))\n",
+    "\n",
     "\n"
    ]
   }
